--- a/shelter/scss/main/main-donation.scss
+++ b/shelter/scss/main/main-donation.scss
@@ -15,6 +15,7 @@
         width: 505px;
         height: 261px;
 
+        text-align: center;
         vertical-align: middle;
       }
     }
