--- a/shelter/scss/main/main-start-screen.scss
+++ b/shelter/scss/main/main-start-screen.scss
@@ -13,7 +13,7 @@
 
       margin-top: 164px;
 
-      gap: 42px;
+      gap: 41px;
 
       h2 {
         color: $color-light-xl;
